--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="alert alert-danger" role="alert">
             A simple danger alert—check it out!
         </div>
-        <div class="alert alert-warning" role="alert">
+        <!-- <div class="alert alert-warning" role="alert">
             A simple warning alert—check it out!
         </div>
         <div class="alert alert-info" role="alert">
@@ -34,7 +34,7 @@
         </div>
         <div class="alert alert-dark" role="alert">
             A simple dark alert—check it out!
-        </div>
+        </div> -->
     </div>
 
 
