去掉搜索栏

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </div>
 
             <!-- 搜索栏 -->
-            <div class="search-container mb-5">
+            <!-- <div class="search-container mb-5">
                 <input type="search" id="help-search-input" class="form-control" placeholder="输入关键词搜索帮助内容...">
-            </div>
+            </div> -->
 
 
             <!-- 帮助页面框架开始 -->
