--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Umorsite帮助, 在线音频编辑器教程, 音频编辑指南, 播客制作技巧, 语音合成教程">
     <title>Umorsite 使用帮助</title>
     <!-- 使用 Bootstrap 4 的 CSS 网格系统和基础样式，但不使用其 JS 组件 -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 
 <body>
@@ -504,6 +504,7 @@
     </div>
 
     <!-- 简单的页面内搜索脚本 -->
+    <script src="./bootstrap.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const searchInput = document.getElementById('help-search-input');
