添加返回首页链接

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
             <!-- 页面主标题 -->
             <div class="text-center my-5 d-flex  justify-content-end">
-                <div class="help-title w-75" style="text-align: start;">
+                <div class="help-title w-75 " style="text-align: start;">
+
                     <h1>使用帮助</h1>
                     <p class="help-subtitle">在这里找到您需要的一切，让创作之旅更加顺畅。</p>
                 </div>
@@ -37,8 +38,11 @@
                 <!-- 左侧导航栏 (纯HTML锚点链接) -->
                 <div class="col-lg-3">
                     <nav class="help-nav">
+
                         <ul class="nav flex-column">
                             <li class="nav-item">
+                                <a class="nav-link" style="color:#007bff;font-size: 18px;"
+                                    href="https://www.umor.site/projects" target="_blank">返回编辑器</a>
                                 <a class="nav-link" href="#section-getting-started">入门指南</a>
                                 <ul class="nav flex-column sub-nav">
                                     <li class="nav-item"><a class="nav-link" href="#subsection-basic-ops">基础操作</a>
