--- a/index.html
+++ b/index.html
@@ -245,10 +245,11 @@
                                     <li><strong>文本编辑器 (上方):</strong>
                                         这里是您的“剧本”。我们最核心的“文稿剪辑”功能就在这里实现——文稿和音频的联动编辑就在这里，可以选择，分割，修改，替换都在这里完成</li>
                                     <li><strong>多轨时间线 (下方):</strong>
-                                        这是一个专业的多音轨视图。您可以在这里看到所有音频的波形，并通过拖拽、裁剪、分割等方式对音频进行精细操作。播放、暂停、调整时间等都在这里完成。</li>
+                                        这是一个专业的多音轨视图。您可以在这里看到所有音频的波形，并通过拖拽、裁剪、分割等方式对音频进行精细操作。最上方是一排工具栏，提供各种音频操作功能，播放、暂停、调整时间等都在这里完成。
+                                    </li>
                                 </ul>
 
-                                <h6>3. 右侧：检查器与工具区</h6>
+                                <h6>3. 右侧：检查器与工具详情区</h6>
                                 <p>这是一个“智能”的上下文面板，它的显示内容会根据您的当前操作而变化。</p>
                                 <ul>
                                     <li><strong>当您选中一个音频片段时：</strong>
@@ -557,8 +558,22 @@
                                 <h5>如何调整轨道音量曲线</h5>
                                 <ul>
                                     <li>
-                                        在轨道面板，打开“轨道音量自动化面板”
+                                        当有人声有音乐时, 需要在人声间隙让音乐声音丝滑的淡入淡出。</li>
+                                    <li>点击工具栏中的“自动音量闪避”，在右侧工具详情区选择合适的参数。</li>
+                                    <li>淡化时间是指 音乐声由低到高淡入的时间，恢复时间是指 音乐声由高到低淡出的时间。</li>
+                                    <li>在轨道信息面板，可以禁用/使用音量曲线和打开/关闭音量曲线面板
+
+                                        <img class="w-25 mt-1 mb-3 ml-2 lazy"
+                                            data-src="./image/volumeAutomation_panel.png" alt="">
+
                                     </li>
+
+
+
+
+
+                                    <img class="w-100 mt-3 mb-3 lazy" data-src="./image/Volume_automation.gif" alt="">
+
                                 </ul>
                             </div>
 
@@ -572,17 +587,53 @@
                             <div class="help-card" id="sub-advanced-1">
                                 <h5>什么是“涟漪编辑 (Ripple Edit)”模式？它有什么用？</h5>
                                 <ul>
-                                    <li>
 
+                                    <img class="w-75 mt-1 mb-3 lazy" data-src="./image/Ripple_Edit.png" alt="">
+
+                                    <li>
+                                        它的核心逻辑是：牵一发而动全身。当你对时间轴上的某一段音频片段进行移动或调整大小操作时，其后的所有音频片段会自动跟随移动，以保持它们之间的相对位置不变。
+                                    </li>
+                                    <li>
+                                        如果不打开它,那么所有对音频片段的操作,仅限于当前音频片段本身,不会影响到其他音频片段的位置。
+
+
+
+                                        <img class="w-100 mt-3 mb-3 lazy" data-src="./image/Ripple_Edit2.gif" alt="">
                                     </li>
                                 </ul>
                             </div>
                             <div class="help-card" id="sub-advanced-2">
                                 <h5>什么是“滑移 (Slip Edit)”工具？我应该在什么时候使用它？</h5>
                                 <ul>
-                                    <li>
 
+                                    <li>
+                                        如果说“涟漪模式”是用来改变时间轴长度的，那么滑移工具 (Slip Edit) 就是用来保持时间轴长度不变的。
                                     </li>
+                                    <li>举个简单的例子：相框钉在墙上完全不动，你用手在相框后面左右抽动那张照片，这就是滑移。
+
+
+                                        <img class="w-100 mt-3 mb-3 lazy" data-src="./image/slip_Edit2.gif" alt="">
+                                    </li>
+                                    <div class="my-3">
+                                        当你对一个音频或视频片段使用滑移工具时，会发生以下情况：
+                                    </div>
+                                    <ul>
+
+
+
+                                        <li>位置不变：这个片段在时间轴上的开始时间点和结束时间点完全不移动。</li>
+                                        <li>时长不变：这个片段的总长度（比如5秒）完全不改变。</li>
+                                        <li>前后素材不变：它前面和后面的邻居片段完全不受影响。</li>
+                                        <li>
+                                            内容改变：改变的是这5秒钟内播放原始素材的哪一部分。
+                                        </li>
+                                    </ul>
+
+
+
+
+
+
                                 </ul>
                             </div>
 
